tests/suite/fail/generated/types/fail_sub_string_bool.ny
fn main() {
    let _ = "a" - true //~ ERROR type mismatch in `subtraction` operation
}
